--- a/BabyPlan/package.json
+++ b/BabyPlan/package.json
@@ -9,4 +9,7 @@
     "express": "3.2.6",
     "jade": "*"
   }
+  "scripts": {
+	    "start": "node app.js --websocket-port=$OPENSHIFT_NODEJS_PORT --log-level=1"
+	}
 }
