--- a/BabyPlan/package.json
+++ b/BabyPlan/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node app.js"
   },
+  "scripts": { "start": "supervisor <relative-path-from-repo-to>/server.js" },
   "dependencies": {
     "express": "3.2.6",
     "jade": "*"
